log/build_2022-08-14_16-12-35/talker/stdout_stderr.log
running egg_info
creating ../../build/talker/talker.egg-info
writing ../../build/talker/talker.egg-info/PKG-INFO
writing dependency_links to ../../build/talker/talker.egg-info/dependency_links.txt
writing entry points to ../../build/talker/talker.egg-info/entry_points.txt
writing requirements to ../../build/talker/talker.egg-info/requires.txt
writing top-level names to ../../build/talker/talker.egg-info/top_level.txt
writing manifest file '../../build/talker/talker.egg-info/SOURCES.txt'
reading manifest file '../../build/talker/talker.egg-info/SOURCES.txt'
writing manifest file '../../build/talker/talker.egg-info/SOURCES.txt'
running build
running build_py
creating /home/max/temp_workspace/build/talker/build
creating /home/max/temp_workspace/build/talker/build/lib
creating /home/max/temp_workspace/build/talker/build/lib/talker
copying talker/main.py -> /home/max/temp_workspace/build/talker/build/lib/talker
copying talker/__init__.py -> /home/max/temp_workspace/build/talker/build/lib/talker
running install
running install_lib
creating /home/max/temp_workspace/install/talker/lib/python3.8/site-packages/talker
copying /home/max/temp_workspace/build/talker/build/lib/talker/main.py -> /home/max/temp_workspace/install/talker/lib/python3.8/site-packages/talker
copying /home/max/temp_workspace/build/talker/build/lib/talker/__init__.py -> /home/max/temp_workspace/install/talker/lib/python3.8/site-packages/talker
byte-compiling /home/max/temp_workspace/install/talker/lib/python3.8/site-packages/talker/main.py to main.cpython-38.pyc
  File "/home/max/temp_workspace/install/talker/lib/python3.8/site-packages/talker/main.py", line 38
    self.timer_callback
    ^
SyntaxError: invalid syntax

byte-compiling /home/max/temp_workspace/install/talker/lib/python3.8/site-packages/talker/__init__.py to __init__.cpython-38.pyc
running install_data
creating /home/max/temp_workspace/install/talker/share/ament_index
creating /home/max/temp_workspace/install/talker/share/ament_index/resource_index
creating /home/max/temp_workspace/install/talker/share/ament_index/resource_index/packages
copying resource/talker -> /home/max/temp_workspace/install/talker/share/ament_index/resource_index/packages
copying package.xml -> /home/max/temp_workspace/install/talker/share/talker
running install_egg_info
Copying ../../build/talker/talker.egg-info to /home/max/temp_workspace/install/talker/lib/python3.8/site-packages/talker-0.0.0-py3.8.egg-info
running install_scripts
Installing talker script to /home/max/temp_workspace/install/talker/lib/talker
writing list of installed files to '/home/max/temp_workspace/build/talker/install.log'
